--- a/manifest.json
+++ b/manifest.json
@@ -5,9 +5,9 @@
   "homepage_url": "http://blog.javarouka.me/",
   "content_security_policy": "script-src 'self' 'unsafe-eval' https://ajax.googleapis.com/ https://ajax.googleapis.com/; object-src 'self';",
   "icons":{
-    "16" : "images/mdn-16.png",
-    "24" : "images/mdn-24.png",
-    "48" : "images/mdn-48.png",
+    "16" : "images/16.png",
+    "24" : "images/24.png",
+    "48" : "images/48.png",
     "128" : "images/orig.png"
   },
   "content_scripts": [{
@@ -20,7 +20,7 @@
   },
   "browser_action": {
     "default_title": "Time to current page",
-    "default_icon": "images/mdn-24.png",
+    "default_icon": "images/24.png",
     "default_popup": "main.html"
   },
   "permissions": [
