--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "Chrome Wheather Viewer",
+  "name": "Chrome Website Image Viewer",
   "version": "0.10.0",
   "homepage_url": "http://blog.javarouka.me/",
   "content_security_policy": "script-src 'self' 'unsafe-eval' https://ajax.googleapis.com/ https://ajax.googleapis.com/; object-src 'self';",
